Update README.md for Spring Boot web application
Major README Updates:
- Updated description from JavaFX desktop to Spring Boot web application
- Added web browser prerequisites and port 8080 information
- Updated architecture section with Spring Boot MVC and Thymeleaf
- Modified getting started guide with Spring Boot commands (mvn spring-boot:run)
- Added web application URLs and access instructions
- Updated project structure to reflect templates/ directory and web resources
- Enhanced usage guide with responsive web interface details
- Updated development section for Thymeleaf templates and Bootstrap
- Added comprehensive deployment section for Ubuntu EC2
- Included systemd service configuration for production deployment
- Added web-specific contribution areas (PWA, API, authentication)
- Updated technology acknowledgments (Spring Boot, Bootstrap, Thymeleaf)
- Enhanced support section with web-specific troubleshooting

The README now accurately reflects the web application nature with:
- Live demo information
- Browser compatibility
- Mobile responsiveness
- EC2 deployment guide
- Port and firewall configuration
- Service management instructions